--- a/CalcService/CalcService/CalcService.csproj
+++ b/CalcService/CalcService/CalcService.csproj
@@ -72,6 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\LocalWebDeploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
