--- a/SampleSite/packages.config
+++ b/SampleSite/packages.config
@@ -4,8 +4,7 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="4.0.20710.0" targetFramework="net45" />
-  <package id="Microsoft.Build.Framework" version="14.3.0" targetFramework="net45" />
-  <package id="Microsoft.Build.Utilities.Core" version="14.3.0" targetFramework="net45" />
+  <!-->package id="Microsoft.Build.Framework" version="14.3.0" targetFramework="net45" /-->
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
